comp/yacc.output
Terminals which are not used

   ID
   TRUE
   FALSE
   SYMBOL
   expr_1


Grammar

    0 $accept: program $end

    1 program: components

    2 components: components component
    3           | component

    4 component: class_interface
    5          | class_implementation
    6          | protocol

    7 class_interface: class_interface_header class_interface_body

    8 class_interface_header: AT_INTERFACE IDENTIFIER SEMI_COLUMN IDENTIFIER
    9                       | AT_INTERFACE IDENTIFIER error IDENTIFIER
   10                       | AT_INTERFACE IDENTIFIER SEMI_COLUMN
   11                       | AT_INTERFACE IDENTIFIER IDENTIFIER
   12                       | AT_INTERFACE IDENTIFIER

   13 class_interface_body: protocol_reference_list instance_variables interface_declaration_list AT_END
   14                     | protocol_reference_list instance_variables AT_END
   15                     | protocol_reference_list interface_declaration_list AT_END
   16                     | instance_variables interface_declaration_list AT_END
   17                     | protocol_reference_list AT_END
   18                     | instance_variables AT_END
   19                     | interface_declaration_list AT_END
   20                     | AT_END

   21 protocol_reference_list: LESS_THAN ids_list MORE_THAN

   22 ids_list: IDENTIFIER
   23         | ids_list error IDENTIFIER
   24         | ids_list COMMA IDENTIFIER

   25 instance_variables: OPEN_S instance_variable_declarations CLOSE_S
   26                   | OPEN_S instance_variable_declarations error
   27                   | OPEN_S instance_variable_declarations

   28 instance_variable_declarations: instance_variable_declarations instance_variable_declaration
   29                               | instance_variable_declaration
   30                               | variable_declaration_list

   31 instance_variable_declaration: visibility_specification variable_declaration_list

   32 variable_declaration_list: variable_declaration_list variable_declaration
   33                          | variable_declaration

   34 visibility_specification: AT_PRIVATE
   35                         | AT_PROTECTED
   36                         | AT_PUBLIC

   37 variable_declaration: type IDENTIFIER SEMI_COMA
   38                     | type IDENTIFIER error
   39                     | type IDENTIFIER EQUAL simple_expr SEMI_COMA
   40                     | type IDENTIFIER EQUAL simple_expr error
   41                     | CONST type IDENTIFIER SEMI_COMA
   42                     | CONST type IDENTIFIER error
   43                     | CONST type IDENTIFIER EQUAL simple_expr SEMI_COMA
   44                     | CONST type IDENTIFIER EQUAL simple_expr error
   45                     | Enum
   46                     | structrule
   47                     | ArrayOne
   48                     | ArrayN

   49 Enum: ENUM OPEN_S ids_list CLOSE_S IDENTIFIER SEMI_COMA
   50     | TYPEDEF ENUM OPEN_S ids_list CLOSE_S IDENTIFIER SEMI_COMA

   51 structrule: STRUCT IDENTIFIER OPEN_S variable_declarations CLOSE_S SEMI_COMA
   52           | STRUCT IDENTIFIER OPEN_S variable_declarations CLOSE_S ids_list SEMI_COMA

   53 variable_declarations: type IDENTIFIER SEMI_COMA
   54                      | variable_declarations type IDENTIFIER SEMI_COMA
   55                      | type IDENTIFIER SEMI_COLUMN simple_expr SEMI_COMA
   56                      | variable_declarations type IDENTIFIER SEMI_COLUMN simple_expr SEMI_COMA
   57                      | variable_declarations CONST type IDENTIFIER SEMI_COMA
   58                      | CONST type IDENTIFIER SEMI_COMA
   59                      | variable_declarations CONST type IDENTIFIER SEMI_COLUMN simple_expr SEMI_COMA
   60                      | CONST type IDENTIFIER SEMI_COLUMN simple_expr SEMI_COMA

   61 ArrayOne: type IDENTIFIER OPEN_ARR INT_VAL CLOSE_ARR EQUAL OPEN_S CLOSE_S SEMI_COMA
   62         | type IDENTIFIER OPEN_ARR INT_VAL CLOSE_ARR SEMI_COMA
   63         | type IDENTIFIER OPEN_ARR INT_VAL CLOSE_ARR EQUAL OPEN_S array_body CLOSE_S SEMI_COMA
   64         | type IDENTIFIER OPEN_ARR CLOSE_ARR EQUAL OPEN_S array_body CLOSE_S SEMI_COMA

   65 array_body: array_body COMMA expr
   66           | expr
   67           | array_body COMMA OPEN_ARR INT_VAL CLOSE_ARR EQUAL expr
   68           | OPEN_ARR INT_VAL CLOSE_ARR EQUAL expr

   69 ArrayN: type IDENTIFIER Multi EQUAL OPEN_S CLOSE_S SEMI_COMA
   70       | type IDENTIFIER Multi SEMI_COMA
   71       | type IDENTIFIER Multi EQUAL OPEN_S array_body2 CLOSE_S SEMI_COMA

   72 Multi: OPEN_ARR INT_VAL CLOSE_ARR OPEN_ARR INT_VAL CLOSE_ARR
   73      | Multi OPEN_ARR INT_VAL CLOSE_ARR

   74 array_body2: OPEN_S array_body CLOSE_S
   75            | expr
   76            | array_body2 COMMA OPEN_S array_body CLOSE_S
   77            | array_body2 COMMA expr

   78 type: simple_type
   79     | complex_type

   80 simple_type: INT
   81            | CHAR
   82            | FLOAT
   83            | NSSTRING
   84            | VOID

   85 complex_type: IDENTIFIER MULTI

   86 interface_declaration_list: interface_declaration_list interface_declaration
   87                           | interface_declaration

   88 interface_declaration: class_method_declaration
   89                      | instance_method_declaration

   90 class_method_declaration: PLUS p_type method_selector SEMI_COMA
   91                         | PLUS p_type method_selector error
   92                         | PLUS method_selector SEMI_COMA
   93                         | PLUS method_selector error

   94 instance_method_declaration: MINUS p_type method_selector SEMI_COMA
   95                            | MINUS method_selector SEMI_COMA
   96                            | MINUS p_type method_selector error
   97                            | MINUS method_selector error

   98 p_type: OPEN_P type CLOSE_P
   99       | error type CLOSE_P
  100       | OPEN_P type error

  101 @1: /* empty */

  102 method_selector: IDENTIFIER SEMI_COLUMN @1 parameter_list

  103 @2: /* empty */

  104 @3: /* empty */

  105 method_selector: IDENTIFIER @2 IDENTIFIER SEMI_COLUMN @3 parameter_list
  106                | IDENTIFIER

  107 parameter_list: parameter_list SEMI_COLUMN parameter
  108               | parameter_list IDENTIFIER SEMI_COLUMN parameter
  109               | parameter_list IDENTIFIER error parameter
  110               | parameter_list IDENTIFIER parameter
  111               | parameter

  112 parameter: p_type IDENTIFIER

  113 try_catch: TRY block_body catch_statment

  114 catch_statment: CATCH OPEN_P NSEXception Exception_type CLOSE_P block_body catch_statment
  115               | FINALLY block_body

  116 Exception_type: NUllPointerException
  117               | OUtOfBoundryException
  118               | CAstException

  119 class_implementation: class_implementation_header class_implementation_body

  120 class_implementation_header: AT_IMPLEMENTATION IDENTIFIER SEMI_COLUMN IDENTIFIER
  121                            | AT_IMPLEMENTATION IDENTIFIER error IDENTIFIER
  122                            | AT_IMPLEMENTATION IDENTIFIER IDENTIFIER
  123                            | AT_IMPLEMENTATION IDENTIFIER

  124 class_implementation_body: instance_variables implementation_definition_list AT_END
  125                          | instance_variables AT_END
  126                          | implementation_definition_list AT_END

  127 implementation_definition_list: implementation_definition_list implementation_definition
  128                               | implementation_definition

  129 implementation_definition: class_implementation_definition
  130                          | instance_implementation_definition

  131 class_implementation_definition: class_implementation_definition_header block_body

  132 class_implementation_definition_header: PLUS p_type method_selector
  133                                       | PLUS method_selector

  134 instance_implementation_definition: instance_implementation_definition_header block_body

  135 instance_implementation_definition_header: MINUS p_type method_selector
  136                                          | MINUS method_selector

  137 statement_list: statement_list statement
  138               | statement

  139 statement: loop_statement
  140          | conditional_statement
  141          | expr SEMI_COMA
  142          | variable_declaration

  143 @4: /* empty */

  144 statement: @4 block_body
  145          | return_statement
  146          | try_catch

  147 return_statement: RETURN expr SEMI_COMA
  148                 | RETURN expr error

  149 loop_statement: for_loop
  150               | while_loop
  151               | do_while_loop

  152 for_loop: for_loop_header statement

  153 for_loop_header: FOR OPEN_P for_initializer SEMI_COMA logic_expr SEMI_COMA expr CLOSE_P
  154                | FOR OPEN_P for_initializer SEMI_COMA logic_expr SEMI_COMA expr error
  155                | FOR for_initializer SEMI_COMA logic_expr SEMI_COMA expr CLOSE_P
  156                | FOR error for_initializer SEMI_COMA logic_expr SEMI_COMA expr CLOSE_P
  157                | FOR OPEN_P SEMI_COMA logic_expr SEMI_COMA expr CLOSE_P
  158                | FOR OPEN_P SEMI_COMA logic_expr SEMI_COMA expr error
  159                | FOR SEMI_COMA logic_expr SEMI_COMA expr CLOSE_P
  160                | FOR error SEMI_COMA logic_expr SEMI_COMA expr CLOSE_P
  161                | FOR OPEN_P for_initializer SEMI_COMA SEMI_COMA expr CLOSE_P
  162                | FOR OPEN_P for_initializer SEMI_COMA logic_expr SEMI_COMA CLOSE_P
  163                | FOR OPEN_P for_initializer SEMI_COMA SEMI_COMA CLOSE_P
  164                | FOR OPEN_P SEMI_COMA logic_expr SEMI_COMA CLOSE_P
  165                | FOR OPEN_P SEMI_COMA SEMI_COMA expr CLOSE_P
  166                | FOR OPEN_P SEMI_COMA SEMI_COMA CLOSE_P

  167 for_initializer: INT IDENTIFIER EQUAL expr
  168                | INT IDENTIFIER expr
  169                | INT IDENTIFIER error expr
  170                | IDENTIFIER EQUAL expr
  171                | IDENTIFIER expr
  172                | IDENTIFIER error expr
  173                | IDENTIFIER

  174 logic_expr: expr LESS_THAN expr
  175           | expr MORE_THAN expr
  176           | expr LESS_OR_EQUAL expr
  177           | expr MORE_OR_EQUAL expr
  178           | expr EQUAL_EQUAL expr
  179           | NOT_EQUAL expr
  180           | OPEN_P logic_expr CLOSE_P
  181           | logic_expr AND_AND logic_expr
  182           | logic_expr OR_OR logic_expr

  183 expr: assign_expr
  184     | simple_expr

  185 logic_expr2: expr2 LESS_THAN expr2
  186            | expr2 MORE_THAN expr2
  187            | expr2 LESS_OR_EQUAL expr2
  188            | expr2 MORE_OR_EQUAL expr2
  189            | expr2 EQUAL_EQUAL expr2
  190            | NOT_EQUAL expr2
  191            | OPEN_P logic_expr2 CLOSE_P
  192            | logic_expr2 AND_AND logic_expr2
  193            | logic_expr2 OR_OR logic_expr2
  194            | error expr2
  195            | OPEN_P logic_expr2 error
  196            | error logic_expr2 CLOSE_P

  197 expr2: simple_expr

  198 assign_expr: long_id EQUAL simple_expr

  199 long_id: long_id DOT IDENTIFIER
  200        | message_call
  201        | IDENTIFIER

  202 simple_expr: STRING_VAL
  203            | INT_VAL

  204 @5: /* empty */

  205 simple_expr: FLOAT_VAL @5 STRING_VAL
  206            | CHAR_VAL
  207            | long_id
  208            | simple_expr PLUS simple_expr
  209            | simple_expr MINUS simple_expr
  210            | simple_expr MULTI simple_expr
  211            | simple_expr DIV simple_expr
  212            | OPEN_P simple_expr CLOSE_P
  213            | p_type simple_expr

  214 block_body: OPEN_S statement_list CLOSE_S
  215           | OPEN_S CLOSE_S

  216 while_loop: while_loop_header statement

  217 while_loop_header: WHILE OPEN_P logic_expr CLOSE_P
  218                  | WHILE OPEN_P logic_expr error
  219                  | WHILE logic_expr CLOSE_P
  220                  | WHILE error logic_expr CLOSE_P

  221 do_while_loop: DO statement while_loop_header SEMI_COMA

  222 conditional_statement: if_header statement
  223                      | if_header statement ELSE statement
  224                      | switch

  225 switch: SWITCH OPEN_P switch_statement CLOSE_P OPEN_S switch_body CLOSE_S
  226       | SWITCH error switch_statement CLOSE_P OPEN_S switch_body CLOSE_S
  227       | SWITCH OPEN_P switch_statement error OPEN_S switch_body CLOSE_S
  228       | SWITCH OPEN_P switch_statement CLOSE_P OPEN_S switch_body error
  229       | SWITCH OPEN_P switch_statement CLOSE_P error switch_body CLOSE_S

  230 switch_body: CASE OPEN_P case_statement CLOSE_P SEMI_COLUMN statement BREAK SEMI_COMA switch_body
  231            | CASE OPEN_P case_statement CLOSE_P SEMI_COLUMN statement error SEMI_COMA switch_body
  232            | DEFAULT SEMI_COLUMN statement BREAK SEMI_COMA
  233            | DEFAULT SEMI_COLUMN statement error SEMI_COMA

  234 switch_statement: logic_expr
  235                 | expr

  236 case_statement: logic_expr2
  237               | expr2

  238 if_header: IF OPEN_P logic_expr CLOSE_P
  239          | IF OPEN_P logic_expr error
  240          | IF logic_expr CLOSE_P
  241          | IF error logic_expr CLOSE_P

  242 message_call: OPEN_ARR sender message CLOSE_ARR

  243 sender: message_call
  244       | IDENTIFIER

  245 message: IDENTIFIER
  246        | IDENTIFIER SEMI_COLUMN argument_list

  247 argument_list: argument_list argument
  248              | argument

  249 argument: SEMI_COLUMN simple_expr
  250         | error simple_expr
  251         | IDENTIFIER SEMI_COLUMN simple_expr
  252         | IDENTIFIER simple_expr
  253         | IDENTIFIER error simple_expr

  254 protocol: protocol_header protocol_body

  255 protocol_header: AT_PROTOCOL IDENTIFIER

  256 protocol_body: protocol_reference_list interface_declaration_list AT_END
  257              | interface_declaration_list AT_END
  258              | protocol_reference_list AT_END
  259              | AT_END


Terminals, with rules where they appear

$end (0) 0
error (256) 9 23 26 38 40 42 44 91 93 96 97 99 100 109 121 148 154
    156 158 160 169 172 194 195 196 218 220 226 227 228 229 231 233
    239 241 250 253
TRY (258) 113
CATCH (259) 114
NSEXception (260) 114
NUllPointerException (261) 116
OUtOfBoundryException (262) 117
CAstException (263) 118
FINALLY (264) 115
AT_INTERFACE (265) 8 9 10 11 12
IDENTIFIER (266) 8 9 10 11 12 22 23 24 37 38 39 40 41 42 43 44 49 50
    51 52 53 54 55 56 57 58 59 60 61 62 63 64 69 70 71 85 102 105 106
    108 109 110 112 120 121 122 123 167 168 169 170 171 172 173 199
    201 244 245 246 251 252 253 255
SEMI_COLUMN (267) 8 10 55 56 59 60 102 105 107 108 120 230 231 232
    233 246 249 251
NSSTRING (268) 83
FLOAT (269) 82
CHAR (270) 81
INT (271) 80 167 168 169
SEMI_COMA (272) 37 39 41 43 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 69 70 71 90 92 94 95 141 147 153 154 155 156 157 158 159
    160 161 162 163 164 165 166 221 230 231 232 233
ID (273)
AT_PUBLIC (274) 36
AT_PROTECTED (275) 35
AT_PRIVATE (276) 34
OPEN_S (277) 25 26 27 49 50 51 52 61 63 64 69 71 74 76 214 215 225
    226 227 228
CLOSE_S (278) 25 49 50 51 52 61 63 64 69 71 74 76 214 215 225 226 227
    229
COMMA (279) 24 65 67 76 77
LESS_THAN (280) 21 174 185
MORE_THAN (281) 21 175 186
AT_END (282) 13 14 15 16 17 18 19 20 124 125 126 256 257 258 259
CONST (283) 41 42 43 44 57 58 59 60
VOID (284) 84
PLUS (285) 90 91 92 93 132 133 208
MINUS (286) 94 95 96 97 135 136 209
OPEN_P (287) 98 100 114 153 154 157 158 161 162 163 164 165 166 180
    191 195 212 217 218 225 227 228 229 230 231 238 239
CLOSE_P (288) 98 99 114 153 155 156 157 159 160 161 162 163 164 165
    166 180 191 196 212 217 219 220 225 226 228 229 230 231 238 240
    241
AT_IMPLEMENTATION (289) 120 121 122 123
AND_AND (290) 181 192
OR_OR (291) 182 193
STRING_VAL (292) 202 205
FLOAT_VAL (293) 205
LESS_OR_EQUAL (294) 176 187
CHAR_VAL (295) 206
INT_VAL (296) 61 62 63 67 68 72 73 203
MORE_OR_EQUAL (297) 177 188
MULTI (298) 85 210
EQUAL_EQUAL (299) 178 189
NOT_EQUAL (300) 179 190
FOR (301) 153 154 155 156 157 158 159 160 161 162 163 164 165 166
EQUAL (302) 39 40 43 44 61 63 64 67 68 69 71 167 170 198
DIV (303) 211
WHILE (304) 217 218 219 220
IF (305) 238 239 240 241
OPEN_ARR (306) 61 62 63 64 67 68 72 73 242
CLOSE_ARR (307) 61 62 63 64 67 68 72 73 242
TRUE (308)
FALSE (309)
RETURN (310) 147 148
AT_PROTOCOL (311) 255
DO (312) 221
DOT (313) 199
SYMBOL (314)
SWITCH (315) 225 226 227 228 229
BREAK (316) 230 232
DEFAULT (317) 232 233
CASE (318) 230 231
STRUCT (319) 51 52
TYPEDEF (320) 50
ENUM (321) 49 50
if_h (322)
ELSE (323) 223
expr_1 (324)
p_type_expr_prec (325)
long_id_prec (326)


Nonterminals, with rules where they appear

$accept (72)
    on left: 0
program (73)
    on left: 1, on right: 0
components (74)
    on left: 2 3, on right: 1 2
component (75)
    on left: 4 5 6, on right: 2 3
class_interface (76)
    on left: 7, on right: 4
class_interface_header (77)
    on left: 8 9 10 11 12, on right: 7
class_interface_body (78)
    on left: 13 14 15 16 17 18 19 20, on right: 7
protocol_reference_list (79)
    on left: 21, on right: 13 14 15 17 256 258
ids_list (80)
    on left: 22 23 24, on right: 21 23 24 49 50 52
instance_variables (81)
    on left: 25 26 27, on right: 13 14 16 18 124 125
instance_variable_declarations (82)
    on left: 28 29 30, on right: 25 26 27 28
instance_variable_declaration (83)
    on left: 31, on right: 28 29
variable_declaration_list (84)
    on left: 32 33, on right: 30 31 32
visibility_specification (85)
    on left: 34 35 36, on right: 31
variable_declaration (86)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48, on right: 32 33 142
Enum (87)
    on left: 49 50, on right: 45
structrule (88)
    on left: 51 52, on right: 46
variable_declarations (89)
    on left: 53 54 55 56 57 58 59 60, on right: 51 52 54 56 57 59
ArrayOne (90)
    on left: 61 62 63 64, on right: 47
array_body (91)
    on left: 65 66 67 68, on right: 63 64 65 67 74 76
ArrayN (92)
    on left: 69 70 71, on right: 48
Multi (93)
    on left: 72 73, on right: 69 70 71 73
array_body2 (94)
    on left: 74 75 76 77, on right: 71 76 77
type (95)
    on left: 78 79, on right: 37 38 39 40 41 42 43 44 53 54 55 56 57
    58 59 60 61 62 63 64 69 70 71 98 99 100
simple_type (96)
    on left: 80 81 82 83 84, on right: 78
complex_type (97)
    on left: 85, on right: 79
interface_declaration_list (98)
    on left: 86 87, on right: 13 15 16 19 86 256 257
interface_declaration (99)
    on left: 88 89, on right: 86 87
class_method_declaration (100)
    on left: 90 91 92 93, on right: 88
instance_method_declaration (101)
    on left: 94 95 96 97, on right: 89
p_type (102)
    on left: 98 99 100, on right: 90 91 94 96 112 132 135 213
method_selector (103)
    on left: 102 105 106, on right: 90 91 92 93 94 95 96 97 132 133
    135 136
@1 (104)
    on left: 101, on right: 102
@2 (105)
    on left: 103, on right: 105
@3 (106)
    on left: 104, on right: 105
parameter_list (107)
    on left: 107 108 109 110 111, on right: 102 105 107 108 109 110
parameter (108)
    on left: 112, on right: 107 108 109 110 111
try_catch (109)
    on left: 113, on right: 146
catch_statment (110)
    on left: 114 115, on right: 113 114
Exception_type (111)
    on left: 116 117 118, on right: 114
class_implementation (112)
    on left: 119, on right: 5
class_implementation_header (113)
    on left: 120 121 122 123, on right: 119
class_implementation_body (114)
    on left: 124 125 126, on right: 119
implementation_definition_list (115)
    on left: 127 128, on right: 124 126 127
implementation_definition (116)
    on left: 129 130, on right: 127 128
class_implementation_definition (117)
    on left: 131, on right: 129
class_implementation_definition_header (118)
    on left: 132 133, on right: 131
instance_implementation_definition (119)
    on left: 134, on right: 130
instance_implementation_definition_header (120)
    on left: 135 136, on right: 134
statement_list (121)
    on left: 137 138, on right: 137 214
statement (122)
    on left: 139 140 141 142 144 145 146, on right: 137 138 152 216
    221 222 223 230 231 232 233
@4 (123)
    on left: 143, on right: 144
return_statement (124)
    on left: 147 148, on right: 145
loop_statement (125)
    on left: 149 150 151, on right: 139
for_loop (126)
    on left: 152, on right: 149
for_loop_header (127)
    on left: 153 154 155 156 157 158 159 160 161 162 163 164 165 166
   , on right: 152
for_initializer (128)
    on left: 167 168 169 170 171 172 173, on right: 153 154 155 156
    161 162 163
logic_expr (129)
    on left: 174 175 176 177 178 179 180 181 182, on right: 153 154
    155 156 157 158 159 160 162 164 180 181 182 217 218 219 220 234
    238 239 240 241
expr (130)
    on left: 183 184, on right: 65 66 67 68 75 77 141 147 148 153 154
    155 156 157 158 159 160 161 165 167 168 169 170 171 172 174 175
    176 177 178 179 235
logic_expr2 (131)
    on left: 185 186 187 188 189 190 191 192 193 194 195 196,
    on right: 191 192 193 195 196 236
expr2 (132)
    on left: 197, on right: 185 186 187 188 189 190 194 237
assign_expr (133)
    on left: 198, on right: 183
long_id (134)
    on left: 199 200 201, on right: 198 199 207
simple_expr (135)
    on left: 202 203 205 206 207 208 209 210 211 212 213,
    on right: 39 40 43 44 55 56 59 60 184 197 198 208 209 210 211 212
    213 249 250 251 252 253
@5 (136)
    on left: 204, on right: 205
block_body (137)
    on left: 214 215, on right: 113 114 115 131 134 144
while_loop (138)
    on left: 216, on right: 150
while_loop_header (139)
    on left: 217 218 219 220, on right: 216 221
do_while_loop (140)
    on left: 221, on right: 151
conditional_statement (141)
    on left: 222 223 224, on right: 140
switch (142)
    on left: 225 226 227 228 229, on right: 224
switch_body (143)
    on left: 230 231 232 233, on right: 225 226 227 228 229 230 231
switch_statement (144)
    on left: 234 235, on right: 225 226 227 228 229
case_statement (145)
    on left: 236 237, on right: 230 231
if_header (146)
    on left: 238 239 240 241, on right: 222 223
message_call (147)
    on left: 242, on right: 200 243
sender (148)
    on left: 243 244, on right: 242
message (149)
    on left: 245 246, on right: 242
argument_list (150)
    on left: 247 248, on right: 246 247
argument (151)
    on left: 249 250 251 252 253, on right: 247 248
protocol (152)
    on left: 254, on right: 6
protocol_header (153)
    on left: 255, on right: 254
protocol_body (154)
    on left: 256 257 258 259, on right: 254


state 0

    0 $accept: . program $end

    AT_INTERFACE       shift, and go to state 1
    AT_IMPLEMENTATION  shift, and go to state 2
    AT_PROTOCOL        shift, and go to state 3

    program                      go to state 4
    components                   go to state 5
    component                    go to state 6
    class_interface              go to state 7
    class_interface_header       go to state 8
    class_implementation         go to state 9
    class_implementation_header  go to state 10
    protocol                     go to state 11
    protocol_header              go to state 12


state 1

    8 class_interface_header: AT_INTERFACE . IDENTIFIER SEMI_COLUMN IDENTIFIER
    9                       | AT_INTERFACE . IDENTIFIER error IDENTIFIER
   10                       | AT_INTERFACE . IDENTIFIER SEMI_COLUMN
   11                       | AT_INTERFACE . IDENTIFIER IDENTIFIER
   12                       | AT_INTERFACE . IDENTIFIER

    IDENTIFIER  shift, and go to state 13


state 2

  120 class_implementation_header: AT_IMPLEMENTATION . IDENTIFIER SEMI_COLUMN IDENTIFIER
  121                            | AT_IMPLEMENTATION . IDENTIFIER error IDENTIFIER
  122                            | AT_IMPLEMENTATION . IDENTIFIER IDENTIFIER
  123                            | AT_IMPLEMENTATION . IDENTIFIER

    IDENTIFIER  shift, and go to state 14


state 3

  255 protocol_header: AT_PROTOCOL . IDENTIFIER

    IDENTIFIER  shift, and go to state 15


state 4

    0 $accept: program . $end

    $end  shift, and go to state 16


state 5

    1 program: components .
    2 components: components . component

    AT_INTERFACE       shift, and go to state 1
    AT_IMPLEMENTATION  shift, and go to state 2
    AT_PROTOCOL        shift, and go to state 3

    $default  reduce using rule 1 (program)

    component                    go to state 17
    class_interface              go to state 7
    class_interface_header       go to state 8
    class_implementation         go to state 9
    class_implementation_header  go to state 10
    protocol                     go to state 11
    protocol_header              go to state 12


state 6

    3 components: component .

    $default  reduce using rule 3 (components)


state 7

    4 component: class_interface .

    $default  reduce using rule 4 (component)


state 8

    7 class_interface: class_interface_header . class_interface_body

    OPEN_S     shift, and go to state 18
    LESS_THAN  shift, and go to state 19
    AT_END     shift, and go to state 20
    PLUS       shift, and go to state 21
    MINUS      shift, and go to state 22

    class_interface_body         go to state 23
    protocol_reference_list      go to state 24
    instance_variables           go to state 25
    interface_declaration_list   go to state 26
    interface_declaration        go to state 27
    class_method_declaration     go to state 28
    instance_method_declaration  go to state 29


state 9

    5 component: class_implementation .

    $default  reduce using rule 5 (component)


state 10

  119 class_implementation: class_implementation_header . class_implementation_body

    OPEN_S  shift, and go to state 18
    PLUS    shift, and go to state 30
    MINUS   shift, and go to state 31

    instance_variables                         go to state 32
    class_implementation_body                  go to state 33
    implementation_definition_list             go to state 34
    implementation_definition                  go to state 35
    class_implementation_definition            go to state 36
    class_implementation_definition_header     go to state 37
    instance_implementation_definition         go to state 38
    instance_implementation_definition_header  go to state 39


state 11

    6 component: protocol .

    $default  reduce using rule 6 (component)


state 12

  254 protocol: protocol_header . protocol_body

    LESS_THAN  shift, and go to state 19
    AT_END     shift, and go to state 40
    PLUS       shift, and go to state 21
    MINUS      shift, and go to state 22

    protocol_reference_list      go to state 41
    interface_declaration_list   go to state 42
    interface_declaration        go to state 27
    class_method_declaration     go to state 28
    instance_method_declaration  go to state 29
    protocol_body                go to state 43


state 13

    8 class_interface_header: AT_INTERFACE IDENTIFIER . SEMI_COLUMN IDENTIFIER
    9                       | AT_INTERFACE IDENTIFIER . error IDENTIFIER
   10                       | AT_INTERFACE IDENTIFIER . SEMI_COLUMN
   11                       | AT_INTERFACE IDENTIFIER . IDENTIFIER
   12                       | AT_INTERFACE IDENTIFIER .

    error        shift, and go to state 44
    IDENTIFIER   shift, and go to state 45
    SEMI_COLUMN  shift, and go to state 46

    OPEN_S     reduce using rule 12 (class_interface_header)
    LESS_THAN  reduce using rule 12 (class_interface_header)
    AT_END     reduce using rule 12 (class_interface_header)
    PLUS       reduce using rule 12 (class_interface_header)
    MINUS      reduce using rule 12 (class_interface_header)


state 14

  120 class_implementation_header: AT_IMPLEMENTATION IDENTIFIER . SEMI_COLUMN IDENTIFIER
  121                            | AT_IMPLEMENTATION IDENTIFIER . error IDENTIFIER
  122                            | AT_IMPLEMENTATION IDENTIFIER . IDENTIFIER
  123                            | AT_IMPLEMENTATION IDENTIFIER .

    error        shift, and go to state 47
    IDENTIFIER   shift, and go to state 48
    SEMI_COLUMN  shift, and go to state 49

    OPEN_S  reduce using rule 123 (class_implementation_header)
    PLUS    reduce using rule 123 (class_implementation_header)
    MINUS   reduce using rule 123 (class_implementation_header)


state 15

  255 protocol_header: AT_PROTOCOL IDENTIFIER .

    $default  reduce using rule 255 (protocol_header)


state 16

    0 $accept: program $end .

    $default  accept


state 17

    2 components: components component .

    $default  reduce using rule 2 (components)


state 18

   25 instance_variables: OPEN_S . instance_variable_declarations CLOSE_S
   26                   | OPEN_S . instance_variable_declarations error
   27                   | OPEN_S . instance_variable_declarations

    IDENTIFIER    shift, and go to state 50
    NSSTRING      shift, and go to state 51
    FLOAT         shift, and go to state 52
    CHAR          shift, and go to state 53
    INT           shift, and go to state 54
    AT_PUBLIC     shift, and go to state 55
    AT_PROTECTED  shift, and go to state 56
    AT_PRIVATE    shift, and go to state 57
    CONST         shift, and go to state 58
    VOID          shift, and go to state 59
    STRUCT        shift, and go to state 60
    TYPEDEF       shift, and go to state 61
    ENUM          shift, and go to state 62

    instance_variable_declarations  go to state 63
    instance_variable_declaration   go to state 64
    variable_declaration_list       go to state 65
    visibility_specification        go to state 66
    variable_declaration            go to state 67
    Enum                            go to state 68
    structrule                      go to state 69
    ArrayOne                        go to state 70
    ArrayN                          go to state 71
    type                            go to state 72
    simple_type                     go to state 73
    complex_type                    go to state 74


state 19

   21 protocol_reference_list: LESS_THAN . ids_list MORE_THAN

    IDENTIFIER  shift, and go to state 75

    ids_list  go to state 76


state 20

   20 class_interface_body: AT_END .

    $default  reduce using rule 20 (class_interface_body)


state 21

   90 class_method_declaration: PLUS . p_type method_selector SEMI_COMA
   91                         | PLUS . p_type method_selector error
   92                         | PLUS . method_selector SEMI_COMA
   93                         | PLUS . method_selector error

    error       shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    OPEN_P      shift, and go to state 79

    p_type           go to state 80
    method_selector  go to state 81


state 22

   94 instance_method_declaration: MINUS . p_type method_selector SEMI_COMA
   95                            | MINUS . method_selector SEMI_COMA
   96                            | MINUS . p_type method_selector error
   97                            | MINUS . method_selector error

    error       shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    OPEN_P      shift, and go to state 79

    p_type           go to state 82
    method_selector  go to state 83


state 23

    7 class_interface: class_interface_header class_interface_body .

    $default  reduce using rule 7 (class_interface)


state 24

   13 class_interface_body: protocol_reference_list . instance_variables interface_declaration_list AT_END
   14                     | protocol_reference_list . instance_variables AT_END
   15                     | protocol_reference_list . interface_declaration_list AT_END
   17                     | protocol_reference_list . AT_END

    OPEN_S  shift, and go to state 18
    AT_END  shift, and go to state 84
    PLUS    shift, and go to state 21
    MINUS   shift, and go to state 22

    instance_variables           go to state 85
    interface_declaration_list   go to state 86
    interface_declaration        go to state 27
    class_method_declaration     go to state 28
    instance_method_declaration  go to state 29


state 25

   16 class_interface_body: instance_variables . interface_declaration_list AT_END
   18                     | instance_variables . AT_END

    AT_END  shift, and go to state 87
    PLUS    shift, and go to state 21
    MINUS   shift, and go to state 22

    interface_declaration_list   go to state 88
    interface_declaration        go to state 27
    class_method_declaration     go to state 28
    instance_method_declaration  go to state 29


state 26

   19 class_interface_body: interface_declaration_list . AT_END
   86 interface_declaration_list: interface_declaration_list . interface_declaration

    AT_END  shift, and go to state 89
    PLUS    shift, and go to state 21
    MINUS   shift, and go to state 22

    interface_declaration        go to state 90
    class_method_declaration     go to state 28
    instance_method_declaration  go to state 29


state 27

   87 interface_declaration_list: interface_declaration .

    $default  reduce using rule 87 (interface_declaration_list)


state 28

   88 interface_declaration: class_method_declaration .

    $default  reduce using rule 88 (interface_declaration)


state 29

   89 interface_declaration: instance_method_declaration .

    $default  reduce using rule 89 (interface_declaration)


state 30

  132 class_implementation_definition_header: PLUS . p_type method_selector
  133                                       | PLUS . method_selector

    error       shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    OPEN_P      shift, and go to state 79

    p_type           go to state 91
    method_selector  go to state 92


state 31

  135 instance_implementation_definition_header: MINUS . p_type method_selector
  136                                          | MINUS . method_selector

    error       shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    OPEN_P      shift, and go to state 79

    p_type           go to state 93
    method_selector  go to state 94


state 32

  124 class_implementation_body: instance_variables . implementation_definition_list AT_END
  125                          | instance_variables . AT_END

    AT_END  shift, and go to state 95
    PLUS    shift, and go to state 30
    MINUS   shift, and go to state 31

    implementation_definition_list             go to state 96
    implementation_definition                  go to state 35
    class_implementation_definition            go to state 36
    class_implementation_definition_header     go to state 37
    instance_implementation_definition         go to state 38
    instance_implementation_definition_header  go to state 39


state 33

  119 class_implementation: class_implementation_header class_implementation_body .

    $default  reduce using rule 119 (class_implementation)


state 34
